# gdext-csvlib

./: Cargo.toml  csvlib.gdextension  test.gd
res/: example.csv  out.csv
src/: csv.rs  lib.rs
